--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <section class="principal container"> 
     <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
+    <img src="Combo 2.png" alt="O combo+ e a junçao do alura+ e o alura lingua">
+    < a href="www.alura.com.br" class="container-botao">assine por12x de rs120,00</a>
+</section>
+
+<section>
+
+<img src="Buttons (1).png" alt="">
+
+</section>
+
+
 </body>
 </html>
