--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
     <img src="Combo 2.png" alt="O combo+ e a junçao do alura+ e o alura lingua">
     < a href="www.alura.com.br" class="container-botao">assine por12x de rs120,00</a>
+     <a href="www.alura.com.br" class="container-botao botao-secundario">Assinar somente o Alura+</a>
+     <p class="container-aviso">*Preço pode variar caso a assinatura seja feita em outros planos</p>
 </section>
 
 <section>
