--- a/index.html
+++ b/index.html
@@ -6,19 +6,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>alura plus 2024</title>
     <link rel="stylesheet" href="style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <section class="principal container"> 
-    <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
-    <img src="Combo 2.png" alt="O combo+ e a junçao do alura+ e o alura lingua">
-    < a href="www.alura.com.br" class="container-botao">assine por12x de rs120,00</a>
+        <div class="container-caixaS">
+    <h1 class="container-titulo">  Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
+    <img class="container-imagem" src="Combo 2.png" alt="O combo+ e a junçao do alura+ e o alura lingua">
+    <a href="www.alura.com.br" class="container-botao">assine por12x de rs120,00</a>
      <a href="www.alura.com.br" class="container-botao botao-secundario">Assinar somente o Alura+</a>
      <p class="container-aviso">*Preço pode variar caso a assinatura seja feita em outros planos</p>
+    </div>
 </section>
 
-<section>
+</section class="container secundario">
+<div class="container-descriçao">
+    <img class="secundario-imagem" src="Plataformas.png" alt="um monitor e um celular com alura pluss aberto">
+    <h2 class="descriçao-titulo">assista do seu jeito </h2>
+    <p class="descriçao-texto"> aproveite a tela grande da tv ou assista no tablet, laptop, celular e outros aparelhos. Nossa seleçao de cursos nao para de creser</p>
 
-<img src="Buttons (1).png" alt="">
+</div>
+
+
+
 
 </section>
 
