--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <body>
     <section class="principal container"> 
         <div class="container-caixaS">
+            
     <h1 class="container-titulo">  Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
     <img class="container-imagem" src="Combo 2.png" alt="O combo+ e a junçao do alura+ e o alura lingua">
     <a href="www.alura.com.br" class="container-botao">assine por12x de rs120,00</a>
@@ -27,19 +28,37 @@
     </div>
 </section>
 
-</section class="container secundario">
+<section class="container secundario">
+    <img class="secundario-imagem" src="Plataformas.png" alt="um monitor e um celular com o alura plus aberto">
 <div class="container-descriçao">
-    <img class="secundario-imagem" src="Plataformas.png" alt="um monitor e um celular com alura pluss aberto">
-    <h2 class="descriçao-titulo">assista do seu jeito </h2>
-    <p class="descriçao-texto"> aproveite a tela grande da tv ou assista no tablet, laptop, celular e outros aparelhos. Nossa seleçao de cursos nao para de creser</p>
+<h2 class="descriçao-titulo">Assista do seu jeito</h2>
+<p class="descriçao-texto">Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. Nossa seleção de cursos não para de crescer.</p>
 
 </div>
+</section>
 
+<section class="container secundario">
+    <div class="container-descriçao">
+        <p class="descriçao-texto">so o combo+ oferece alura+ e alura lingua juntos para voc ter acesso a cursos e diversas areas da tecnologia e aprender ingles ou epanhol, onde  como quiser.</p>
+        <a href="www.alura.com.br" class="container-botao"> assine o combo+</a>
 
+    </div>
+
+    <img src="Telas.png" alt="tela da alura plus e da alura linguas" class="secundario-imagem">
 
 
 </section>
 
+<section class="container secundario">
+    <img src="Notebook.png" class="secundario-imagem" alt="">
+    <div class="container-descriçao">
+        <h2 class="descriçao-titulo"> baixe seus cursos</h2>
+        <p class="descriçao-texto">baixe e assista quando e onde quiser. seus favoritos estao sempre com voce, ate mesmo sem internet</p>
+
+
+    </div>
+
+</section>
 
 </body>
 </html>
