--- a/index.html
+++ b/index.html
@@ -60,5 +60,59 @@
 
 </section>
 
+<section class="dispositivos">
+    <h2 class="dispositivo__titulos">disponivel nos seus dispoitivos preferidos</h2>
+<ul class="dispositivo__lista">
+<li>
+    <img src="tv.png" alt="icone de televisao">
+    <h3 class="lista__item">tv</h3>
+
+
+</li>
+
+<li>
+    <img src="computador.png" alt="icone de conputador">
+    <h3 class="lista__item">computador</h3>
+</li>
+
+<img src="celular.png" alt="icone de celular">
+<h3 class="lista__item">celular</h3>
+
+</ul>
+
+</section>
+
+<footer class="rodape">
+    <img src="Logo.png" alt="logo da alura amais" class="rodape__logo">
+    <ul class="rodape__lista">
+
+        <li class="lista__link">
+            <a href="#">idioma</a>
+        </li>
+
+        <li class="lista__link">
+            <a href="#">dispositivos conpativeis</a>
+        </li>
+        <li class="lista__link">
+            <a href="#">politica e privacidade</a>
+        </li>
+        <li class="lista__link">
+            <a href="#">proteçao de dados brasil</a>
+        </li>
+        <li class="lista__link">
+            <a href="#">anuncios personalizados</a>
+        </li>
+        <li class="lista__link">
+            <a href="#">ajuda</a>
+        </li>
+    </ul>
+
+<p class="rodape__texto">texto 01</p>
+<p class="rodape__texto">texto 02</p>
+
+
+
+</footer>
+
 </body>
 </html>
