--- a/index.html
+++ b/index.html
@@ -1,118 +1,110 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>alura plus 2024</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Alura Plus 2024</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap" rel="stylesheet">
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap" rel="stylesheet">
 
 </head>
+
 <body>
-    <section class="principal container"> 
-        <div class="container-caixaS">
-            
-    <h1 class="container-titulo">  Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
-    <img class="container-imagem" src="Combo 2.png" alt="O combo+ e a junçao do alura+ e o alura lingua">
-    <a href="www.alura.com.br" class="container-botao">assine por12x de rs120,00</a>
-     <a href="www.alura.com.br" class="container-botao botao-secundario">Assinar somente o Alura+</a>
-     <p class="container-aviso">*Preço pode variar caso a assinatura seja feita em outros planos</p>
+  <section class="principal container">
+    <div class="container-caixa">
+      <h1 class="container-titulo"> Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.
+      </h1>
+      <img class="container-imagem" src="Combo 2.png" alt="O Combo+ é a junção do Alura+ e o Alura Língua.">
+      <a href="www.alura.com.br" class="container-botao">Assine po 12x de R$120,00*</a>
+      <a href="www.alura.com.br" class="container-botao  botao-secundario"> Assinar somente o Alura+</a>
+      <p class="container-aviso"> preço pode variar caso a assinatura seja feita em outros planos</p>
     </div>
-</section>
 
-<section class="container secundario">
-    <img class="secundario-imagem" src="Plataformas.png" alt="um monitor e um celular com o alura plus aberto">
-<div class="container-descriçao">
-<h2 class="descriçao-titulo">Assista do seu jeito</h2>
-<p class="descriçao-texto">Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. Nossa seleção de cursos não para de crescer.</p>
 
+  </section>
+
+
+  <section class="container secundario">
+    <img class="secundario-imagem" src="Plataformas.png" alt="um munitor e um celular com o alura plus aberto">
+    <div class="container-descrição">
+      <h2 class="descrição-titulo"> Assista do seu jeito</h2>
+      <p class="descrição-texto"> Aproveite a tela grande da TV ou assistano tablet, laptop, celular e outros aparelhos. Nossa seleção de curso não
+        para de crescer.</p>
+
+    </div>
+  </section>
+
+  <section class="container secundario">
+    <div class="container-descrição">
+      <p class="descrição-texto">Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser.</p>
+      <a href="www.alura.com.br" class="container-botao secundario-botao" >Assine o Combo+</a>
 </div>
-</section>
+<img src="Telas.png" alt="Tela da alura plus e da alura lingua" class="secundario-imagem" >
+  </section>
 
-<section class="container secundario">
-    <div class="container-descriçao">
-        <p class="descriçao-texto">so o combo+ oferece alura+ e alura lingua juntos para voc ter acesso a cursos e diversas areas da tecnologia e aprender ingles ou epanhol, onde  como quiser.</p>
-        <a href="www.alura.com.br" class="container-botao"> assine o combo+</a>
+  <section class="container secundario">
+    <img src="Notebook.png" class="secundario-imagem" alt="Notebook">
+<div class="container-descrição">
+  <h2 class="descrição-titulo">Baixe seus cursos</h2>
+<p class="descrição-texto">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet.</p>
+</div>
+  </section>
 
-    </div>
+  <section class="dispositivos">
+   <h2  class="dispositivo-titulos">Disponível nos seus dispositivos preferidos</h2>
+   <ul class="dispositivo-lista">
+    <li>
+      <img src="tv.png" alt="icone de televisao">
+      <h3 class="lista-item">Tv</h3>
+    </li>
+    <li>
+      <img src="computador.png" alt="içone de computador">
+      <h3 class="lista-item">Computador</h3>
+    </li>
+    <li>
+      <img src="celular.png" alt="içone de celular">
+      <h3 class="lista-item">Celular</h3>
+    </li>
+  </ul>
+  </section>
 
-    <img src="Telas.png" alt="tela da alura plus e da alura linguas" class="secundario-imagem">
-
-
-</section>
-
-<section class="container secundario">
-    <img src="Notebook.png" class="secundario-imagem" alt="">
-    <div class="container-descriçao">
-        <h2 class="descriçao-titulo"> baixe seus cursos</h2>
-        <p class="descriçao-texto">baixe e assista quando e onde quiser. seus favoritos estao sempre com voce, ate mesmo sem internet</p>
-
-
-    </div>
-
-</section>
-
-<section class="dispositivos">
-    <h2 class="dispositivo__titulos">disponivel nos seus dispoitivos preferidos</h2>
-<ul class="dispositivo__lista">
-<li>
-    <img src="tv.png" alt="icone de televisao">
-    <h3 class="lista__item">tv</h3>
-
-
-</li>
-
-<li>
-    <img src="computador.png" alt="icone de conputador">
-    <h3 class="lista__item">computador</h3>
-</li>
-
-<img src="celular.png" alt="icone de celular">
-<h3 class="lista__item">celular</h3>
-
-</ul>
-
-</section>
-
-<footer class="rodape">
-    <img src="Logo.png" alt="logo da alura amais" class="rodape__logo">
-    <ul class="rodape__lista">
-
-        <li class="lista__link">
-            <a href="#">idioma</a>
-        </li>
-
-        <li class="lista__link">
-            <a href="#">dispositivos conpativeis</a>
-        </li>
-        <li class="lista__link">
-            <a href="#">politica e privacidade</a>
-        </li>
-        <li class="lista__link">
-            <a href="#">proteçao de dados brasil</a>
-        </li>
-        <li class="lista__link">
-            <a href="#">anuncios personalizados</a>
-        </li>
-        <li class="lista__link">
-            <a href="#">ajuda</a>
-        </li>
+  <footer class="rodape">
+    <img src="Logo.png" alt="logo da alura amais" class="rodape-logo">
+    <ul class="rodape-lista">
+      <li class="lista-link">
+        <a href="#">Idioma</a>
+      </li>
+      <li class="lista-link">
+        <a href="#">Dispositivos compatíveis</a>
+      </li>
+      <li class="lista-link">
+        <a href="#">Contrato de assinatura</a>
+      </li>
+      <li class="lista-link">
+        <a href="#">Politica de privacidade</a>
+      </li>
+      <li class="lista-link">
+        <a href="#">Proteção de dados no Brasil</a>
+      </li>
+      <li class="lista-link">
+        <a href="#">Anuncios personalizados</a>
+      </li>
+      <li class="lista-link">
+        <a href="#">Ajuda</a>
+      </li>Logo.png
     </ul>
+<p class="rodape-texto">® 2021 Alura, Alura+ e Alura Língua. Todos os direitos reservados. Serviço de assinatura paga. Conteúdo sujeito a disponibilidade.</p>
+<p class="rodape-texto">Alura+ é um serviço pago, baseado em assinatura e sujeito a termos e condições. O serviço Alura+ é comercializado por Aovs Sistemas de Informática S.A., Rua Vergueiro, 3185 - Liberdade, São Paulo - SP, 04101-300, Brasil e CNPJ 05.555.382/0001-33</p>
+  </footer>
 
-<p class="rodape__texto">texto 01</p>
-<p class="rodape__texto">texto 02</p>
-
-
-
-</footer>
-
+  
 </body>
+
 </html>
